@@ -15,6 +15,8 @@
 - Bugfix: Minimise interference with strange CSS styles.
 - Bugfix: Do not render an unresolvable method analysis recursion
   when there are no methods to analyse in that specific class.
+- Bugfix: The file service can now read the bottom of file more
+  reliably.
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
